# P1_Computron

./: CMakeLists.txt
include/: computron.h
src/: computron.cpp  main.cpp
test/: test.cpp
